--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --bg-gray: #e8e8e8;
     --color-primary: #4d41c0;
     --white: #FFFF;
+    --text-gray: #4a4a4a;
 }
 
 
@@ -57,4 +58,46 @@ a, a:hover {
 
 .DSMovie-contact-container img {
     margin-right: 10px;
+}
+
+#DSMovie-card-list {
+    padding: 40px 0;
+}
+
+.DSMovie-card {
+    width: 360px;
+    
+}
+
+.DSMovie-card img {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.DSMovie-card-description {
+    background-color: var(--white);
+    padding: 10px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.DSMovie-card-description h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.DSMovie-btn, .DSMovie-btn:hover {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
 }
