--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ a, a:hover {
 }
 
 .DSMovie-card {
-    width: 360px;
+    width: 100%;
     
 }
 
@@ -76,17 +76,20 @@ a, a:hover {
 
 .DSMovie-card-description {
     background-color: var(--white);
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 0 0 8px 8px;
+    min-height: 200px;
 }
 
 .DSMovie-card-description h3 {
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 25px;
+    text-align: center;
 }
 
 .DSMovie-btn, .DSMovie-btn:hover {
