--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ a, a:hover {
 }
 
 #DSMovie-card-list {
-    padding: 40px 10px;
+    padding: 0px 10px;
 }
 
 .DSMovie-card {
@@ -170,4 +170,52 @@ a, a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+.DSMovie-pagination-container {
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+
+}
+.DSMovie-pagination-box {
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.DSMovie-pagination-box  p {
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+
+.DSMovie-pagination-box button {
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.DSMovie-pagination-box button img {
+    filter: brightness(0) saturate(100%) invert(26%) sepia(15%) saturate(7427%) hue-rotate(229deg) brightness(98%) contrast(94%);
+}
+
+.DSMovie-pagination-box button:disabled {
+    border: 1px solid var(--light-gray);
+    background-color: var(--white);
+}
+
+.DSMovie-pagination-box button:disabled img {
+    filter: unset;
+}
+
+.dsmovie-flip-horizontal {
+    transform: rotate(180deg);
 }
